# ai-fellows-resources

./: .gitignore  README.md  SETUP.md  monte_carlo_ai_connection.md  monte_carlo_pi_simulation_KEY.ipynb  pyproject.toml
calculating-pi/: grade_monte_carlo.py  monte_carlo_pi_simulation.ipynb  monte_carlo_pi_simulation_KEY.ipynb
chain-rule/: README.md  backpropagation_simulator.ipynb  backpropagation_simulator.py  chain_rule_neural_networks_worksheet.md  teacher_guide_chain_rule_backpropagation.md
monte-carlo/: README.md  monte_carlo_pi_simulation.ipynb  monte_carlo_pi_simulation_KEY_grade_report.txt  monte_carlo_teacher_guide.md
monty-hall/: README.md  monty_hall_lesson_plan.docx  monty_hall_simulation.py
